@@ -9,6 +9,9 @@ library function.
 
 Fix an uninitialised variable use (spotted by clang).
 
+Check that strdup hasn't failed when setting up the environment (spotted
+by clang).
+
 - onenetd 1.11
 
 Change the license from the GPL to the Expat license.
